Obtener las metricas seleccionadno un mes en particular
